force-app/main/default/objects/Adverse_Action_Config__mdt/Adverse_Action_Config__mdt.object-meta.xml
<CustomObject>
    <label>Adverse Action Config</label>
    <pluralLabel>Adverse Action Configs</pluralLabel>
    <description>Config-as-data for the ECOA / Regulation B (12 CFR 1002.9) adverse action notice: creditor identity, the federal oversight agency block, the verbatim anti-discrimination notice, and the principal-reason cap. Editable without a deployment so legal/compliance can keep the disclosure current (e.g. agency address changes) without a code release.</description>
</CustomObject>