force-app/main/default/objects/Adverse_Action_Config__mdt/fields/Creditor_Address__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Address__c</fullName>
    <label>Creditor Address</label>
    <type>TextArea</type>
    <description>Address of the creditor, required content element under 12 CFR 1002.9(a)(2)(i).</description>
</CustomField>