force-app/main/default/objects/Adverse_Action_Config__mdt/fields/Creditor_Name__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Name__c</fullName>
    <label>Creditor Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Name of the creditor, required content element under 12 CFR 1002.9(a)(2)(i).</description>
</CustomField>