force-app/main/default/objects/Adverse_Action_Config__mdt/fields/ECOA_Notice__c.field-meta.xml
<CustomField>
    <fullName>ECOA_Notice__c</fullName>
    <label>ECOA Notice</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>The verbatim ECOA section 701(a) anti-discrimination notice. Regulation B requires substantially-similar wording; keeping it as data lets compliance update it without a code release. The literal "[AGENCY]" token is replaced at render time with the Oversight Agency name and address.</description>
</CustomField>