force-app/main/default/objects/Adverse_Action_Config__mdt/fields/Notice_Window_Days__c.field-meta.xml
<CustomField>
    <fullName>Notice_Window_Days__c</fullName>
    <label>Notice Window Days</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Days within which the notice must be sent after a completed application — 30 under 12 CFR 1002.9(a)(1). Used only to compute the displayed response-by date; not a behavioral SLA.</description>
</CustomField>