force-app/main/default/objects/Adverse_Action_Config__mdt/fields/Oversight_Agency_Address__c.field-meta.xml
<CustomField>
    <fullName>Oversight_Agency_Address__c</fullName>
    <label>Oversight Agency Address</label>
    <type>TextArea</type>
    <description>Address of the federal agency that administers compliance, required by 12 CFR 1002.9(b)(1).</description>
</CustomField>