force-app/main/default/objects/Adverse_Action_Config__mdt/fields/Oversight_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Oversight_Agency_Name__c</fullName>
    <label>Oversight Agency Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Name of the federal agency that administers compliance, required by 12 CFR 1002.9(b)(1) and named in the 701(a) notice.</description>
</CustomField>