force-app/main/default/objects/Adverse_Action_Config__mdt/fields/Reason_Limit__c.field-meta.xml
<CustomField>
    <fullName>Reason_Limit__c</fullName>
    <label>Reason Limit</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <description>Maximum number of principal reasons to disclose. Reg B mandates no count, but the Official Interpretation treats disclosing more than four as unhelpful. Default 4.</description>
</CustomField>